--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "social-media-network",
   "version": "0.1.0",
-  "homepage": "https://github.com/Bijelic03/Social-Media-Network",
-  "private": true,
+  "homepage": "https://bijelic03.github.io/social-media-network",
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
