added layout, navbar, contacts, requests, profile info, story box

--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "homepage": "https://bijelic03.github.io/social-media-network",
   "private": false,
   "dependencies": {
+    "@material-tailwind/react": "^1.4.2",
+    "@tailwindcss/typography": "^0.5.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -39,6 +42,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^5.0.0"
+    "gh-pages": "^5.0.0",
+    "tailwindcss": "^3.2.7"
   }
 }
